fix: cut off #.numlist, #.numlist1, #.numlist2

--- a/src/base.css
+++ b/src/base.css
@@ -1686,112 +1686,6 @@ a.tag[data-ref^="."] {
 }
 
 
-/* numbered lists */
-/* (forked from logtools) */
-
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block {
-    counter-increment: lvlNumber;
-}
-
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container > .bullet {
-    visibility: hidden;
-}
-
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container::before {
-    content: counters(lvlNumber, ".") ":";
-    position: absolute;
-    display: block;
-    width: 25px;
-}
-
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block > div > div > a:hover > .bullet-container,
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container.bullet-closed {
-    font-weight: bold;
-    background-color: unset;
-}
-
-.ls-block[data-refs-self*='".numlist"'] > .block-children-container > .block-children > .ls-block[data-collapsed^="{"] > div > div > .block-control > .control-hide {
-    display: unset;
-}
-
-/* .numlist1 is a clone of .numlist but with different counter name */
-/* to prevent intersection when there is a need to use it nested */
-
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block {
-    counter-increment: lvlNumber1;
-}
-
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container > .bullet {
-    visibility: hidden;
-}
-
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container::before {
-    content: counters(lvlNumber1, ".") ":";
-    position: absolute;
-    display: block;
-    width: 25px;
-}
-
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block > div > div > a:hover > .bullet-container,
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container.bullet-closed {
-    font-weight: bold;
-    background-color: unset;
-}
-
-.ls-block[data-refs-self*='".numlist1"'] > .block-children-container > .block-children > .ls-block[data-collapsed^="{"] > div > div > .block-control > .control-hide {
-    display: unset;
-}
-
-
-/* numbered lists - second level */
-/* (forked from logtools) */
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block {
-    counter-increment: lvlNumber2;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container::before {
-    content: counters(lvlNumber2, ".") ":";
-    position: absolute;
-    display: block;
-    width: 25px;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block {
-    counter-increment: sublvlNumber;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container::before {
-    content: counters(lvlNumber2, ".") "." counters(sublvlNumber, ".") ":";
-    position: absolute;
-    display: block;
-    padding-right: 0.25em;
-    width: 50px;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block[data-collapsed^="{"] > div > div > .block-control > .control-hide,
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block[data-collapsed^="{"] > div > div > .block-control > .control-hide {
-    display: unset;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > div > div > a:hover > .bullet-container,
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container.bullet-closed,
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block > div > div > a:hover > .bullet-container,
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container.bullet-closed {
-    font-weight: bold;
-    background-color: unset;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block > div > div > .block-control {
-    width: 33px !important;
-}
-
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container > .bullet,
-.ls-block[data-refs-self*='".numlist2"'] > .block-children-container > .block-children > .ls-block > .block-children-container > .block-children > .ls-block > div > div > a > .bullet-container > .bullet {
-    visibility: hidden;
-}
-
-
 /* borders around blocks */
 /* (forked from logtools) */
 
